[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/puzzle1.gd" type="Script" id=1]
[ext_resource path="res://sprites/Mapas_Itens/Mushroom expansion/Backgrounds/bg_grasslands.png" type="Texture" id=2]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/hill_large.png" type="Texture" id=3]
[ext_resource path="res://sprites/Mapas_Itens/Tiles/grassMid.png" type="Texture" id=4]
[ext_resource path="res://scenes/fim_fase.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/personagem.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/botao_verde.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/Item/signRight.tex" type="Texture" id=8]

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 841.445, 463.74, 848.796, 474.767, 851.001, 496.084, 851.001, 515.932, 851.001, 643.838, 803.955, 644.573, 803.22, 496.819, 803.22, 480.647, 806.161, 470.356, 816.452, 460.8, 823.803, 457.859, 832.624, 458.594 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8.77883, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 352.888 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 31.7096, 10 )

[node name="cenario1" type="Node"]

[node name="cenario1_static" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 4.51251 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 59.7445, 0, 0, 1.90748, 516.72, 668.426 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1.05258, 1033.86, 360.44 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 3 )
shapes/3/transform = Matrix32( 2.59421, 0, 0, 1.05258, 3.40045, 360.44 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 4 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 329.225, 637.536 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="ceu" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 513.744, 398.832 )
texture = ExtResource( 2 )

[node name="coBarreira" type="CollisionPolygon2D" parent="cenario1_static"]

transform/pos = Vector2( 0, 4.51251 )
build_mode = 0
polygon = Vector2Array( 841.445, 463.74, 848.796, 474.767, 851.001, 496.084, 851.001, 515.932, 851.001, 643.838, 803.955, 644.573, 803.22, 496.819, 803.22, 480.647, 806.161, 470.356, 816.452, 460.8, 823.803, 457.859, 832.624, 458.594 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="barreiraBody" type="KinematicBody2D" parent="cenario1_static"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="barreira" type="Sprite" parent="cenario1_static/barreiraBody"]

transform/pos = Vector2( 826.3, 555.344 )
transform/scale = Vector2( 1, 1.27406 )
texture = ExtResource( 3 )

[node name="chao" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 513.689, 683.697 )
texture = ExtResource( 4 )

[node name="chao14" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 26.3205, 683.697 )
texture = ExtResource( 4 )

[node name="chao10" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 165.881, 683.791 )
texture = ExtResource( 4 )

[node name="chao11" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 96.1945, 683.697 )
texture = ExtResource( 4 )

[node name="chao12" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 1000.15, 683.697 )
texture = ExtResource( 4 )

[node name="chao13" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 931.277, 683.603 )
texture = ExtResource( 4 )

[node name="chao7" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 861.498, 683.697 )
texture = ExtResource( 4 )

[node name="chao8" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 791.717, 683.697 )
texture = ExtResource( 4 )

[node name="chao9" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 234.568, 683.697 )
texture = ExtResource( 4 )

[node name="chao6" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 374.129, 683.697 )
texture = ExtResource( 4 )

[node name="chao5" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 304.348, 683.791 )
texture = ExtResource( 4 )

[node name="chao3" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 722.561, 683.509 )
texture = ExtResource( 4 )

[node name="chao2" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 653.156, 683.697 )
texture = ExtResource( 4 )

[node name="chao1" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 443.909, 683.697 )
texture = ExtResource( 4 )

[node name="chao4" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 583.689, 683.697 )
texture = ExtResource( 4 )

[node name="collision_chao" type="CollisionShape2D" parent="cenario1_static"]

transform/pos = Vector2( 516.72, 668.426 )
transform/scale = Vector2( 59.7445, 1.90748 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="fim_fase" parent="cenario1_static" instance=ExtResource( 5 )]

transform/pos = Vector2( 951.368, 602.504 )

[node name="parede_D" type="CollisionShape2D" parent="cenario1_static"]

transform/pos = Vector2( 1033.86, 360.44 )
transform/scale = Vector2( 1, 1.05258 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 2

[node name="parede_E" type="CollisionShape2D" parent="cenario1_static"]

transform/pos = Vector2( 3.40045, 360.44 )
transform/scale = Vector2( 2.59421, 1.05258 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 3

[node name="personagem" parent="cenario1_static" instance=ExtResource( 6 )]

transform/pos = Vector2( 116.157, 620.293 )

[node name="botao_verde" parent="cenario1_static" instance=ExtResource( 7 )]

transform/pos = Vector2( 329.883, 613 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cenario1_static"]

transform/pos = Vector2( 329.225, 637.536 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 4

[node name="placa" type="Sprite" parent="cenario1_static"]

transform/pos = Vector2( 597.407, 614.018 )
texture = ExtResource( 8 )


